@@ -14,7 +14,6 @@
     <name>EasyWeather</name>
     <description>EasyWeather</description>
     <properties>
-        <java.version>1.9</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -84,6 +83,9 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <verbose>true</verbose>
+                    <source>3.9.6</source>
+                    <target>3.9.6</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
